change to movie add/edit menus

--- a/public/global.css
+++ b/public/global.css
@@ -78,6 +78,9 @@ body {
 .main .page-header {
   margin-top: 0;
 }
-.alertify-logs {z-index: 9999;position: 'bottom-right';}
-#submit-movie {padding-left: 30px; padding-right: 30px;}
-#edit-movie {padding-left: 30px; padding-right: 30px;}
+.alertify-logs {z-index: 9999;}
+#submit-movie {width: 70px;}
+#edit-movie {width: 70px;}
+.movie-option-button {
+  width: 70px;
+}
