use socket io to save and query information

--- a/public/partials/movie-list.html
+++ b/public/partials/movie-list.html
@@ -17,9 +17,9 @@
   <!-- Add menu -->
   <div ng-show="menu == 'add'" class="col-md-9 col-sm-6 col-md-offset-1 col-sm-offset-1 input-group movie-input-group">
     <span class="input-group-addon">Add Movie</span>
-    <input type="text" id="movie-name-input" class="form-control" placeholder="New Movie Name" aria-describedby="movie-name-input" />
+    <input type="text" id="movie-name-input" ng-model="moviename" class="form-control" aria-describedby="movie-name-input" />
     <span class="input-group-btn">
-      <button id="submit-movie" type="button" class="btn btn-success">
+      <button id="submit-movie" type="button" class="btn btn-success" ng-click="sendMovie()">
         <i class="fa fa-check"></i>
       </button>
       <button type="button" class="btn btn-danger movie-option-button"  ng-click="changeMenu('add-edit')">
@@ -45,9 +45,9 @@
         </tr>
       </thead>
       <tbody>
-        <tr ng-repeat="movie in mongoStuff">
+        <tr ng-repeat="movie in movies">
           <td>#</td>
-          <td>{{movie.name}}</td>
+          <td>{{movie.movieName}}</td>
           <td>{{movie.addedBy}}</td>
         </tr>
       </tbody>
@@ -57,6 +57,8 @@
 <script>
 /*           MovieList page             */
 
+//this is all moving to controller
+/*
 // submit movie event
 $('#submit-movie').click(function () {
   var movieName = $('#movie-name-input').val();
@@ -70,22 +72,11 @@ $('#submit-movie').click(function () {
   $('#movie-name-input').val('');
   return false;
 });
-/*
-$('.movie-option-button').click(function() {
-  var name = $(this).attr('data-target');
-  if (name = "#movie-edit-menu") {
-    alertify.success("This doesn't do anything yet");
-    return;
-  }
-  console.log('showing ' + name);
-  $('.movie-input-group').addClass('notshown');
-  $(name).removeClass('notshown');
-});
-*/
 // Add a movie to the list
 socket.on('save entry', function(moviename){
   var rownum = 1 + $('#movie-table > tbody > tr').length;
   var rowinfo = '<tr><td>' + rownum + '</td><td>' + moviename + '</td></tr>';
   $('#movie-table > tbody:last-child').append(rowinfo);
 });
+*/
 </script>
