--- a/public/partials/movie-list.html
+++ b/public/partials/movie-list.html
@@ -1,59 +1,85 @@
 <!-- Movie List page Container -->
-<div class="col-sm-8 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="movie-list">
+<div class="col-sm-11 col-sm-offset-4 col-md-10 col-md-offset-2 main" id="movie-list">
   <div align="center">
     <h1 class="page-header">Movie List</h1>
   </div>
-  <!-- Add/Edit buttons -->
-  <div ng-show="menu == 'add-edit'" class="col-md-9 col-sm-6 col-md-offset-1 col-sm-offset-1 input-group movie-input-group">
-    <span class="btn-group pull-right">
-      <button type="button" class="btn btn-warning movie-option-button" ng-click="changeMenu('add')">
-        <i class="fa fa-plus"></i>
-      </button>
-      <button type="button" class="btn btn-info movie-option-button" ng-click="changeMenu('edit')">
-        <i class="fa fa-pencil-square-o"></i>
-      </button>
-    </span>
-  </div>
-  <!-- Add menu -->
-  <div ng-show="menu == 'add'" class="col-md-9 col-sm-6 col-md-offset-1 col-sm-offset-1 input-group movie-input-group">
-    <span class="input-group-addon">Add Movie</span>
-    <input type="text" id="movie-name-input" ng-model="moviename" class="form-control" aria-describedby="movie-name-input" />
-    <span class="input-group-btn">
-      <button id="submit-movie" type="button" class="btn btn-success" ng-click="sendMovie()">
-        <i class="fa fa-check"></i>
-      </button>
-      <button type="button" class="btn btn-danger movie-option-button"  ng-click="changeMenu('add-edit')">
-        <i class="fa fa-close"></i>
-      </button>
-    </span>
-  </div>
-  <!-- Edit menu -->
-  <div ng-show="menu == 'edit'" class="col-md-9 col-sm-6 col-md-offset-1 col-sm-offset-1 input-group movie-input-group">
-    <span class="btn-group pull-right">
-      <button type="button" class="btn btn-danger movie-option-button" ng-click="changeMenu('add-edit')">
-        <i class="fa fa-close"></i>
-      </button>
-    </span>
-  </div>
-  <div class="col-md-12 table-responsive">
-    <table class="table table-striped table-hover" id="movie-table">
-      <thead>
-        <tr>
-          <th class="col-md-1">#</th>
-          <th class="col-md-9">Title</th>
-          <th class="col-md-2">Added by</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="movie in movies">
-          <td>#</td>
-          <td>{{movie.movieName}}</td>
-          <td>{{movie.addedBy}}</td>
-        </tr>
-      </tbody>
-    </table>
+  <div class='panel panel-default'>
+    <div class='panel-heading'>
+      <!-- Add/Edit buttons -->
+      <div ng-show="menu == 'add-edit'" class="col-md-10 col-sm-10 col-md-offset-1 col-sm-offset-1 input-group movie-input-group">
+        <span class="btn-group pull-right">
+          <button type="button" class="btn btn-success movie-option-button" ng-click="changeMenu('add')">
+            <i class="fa fa-plus"></i>
+          </button>
+          <button type="button" class="btn btn-warning movie-option-button" ng-click="changeMenu('edit')">
+            <i class="fa fa-pencil-square-o"></i>
+          </button>
+        </span>
+        <div class="btn-group pull-right" id="movie-sort-by">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <b>Sort by </b><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="" ng-click="order('_id', false)">Don't sort</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="" ng-click="order('movieName', false)">Alphabetical (A-Z)</a></li>
+            <li><a href="" ng-click="order('movieName', true)">Alphabetical (Z-A)</a></li>
+            <li><a href="" ng-click="order('dateAdded', false)">Date Added (oldest first)</a></li>
+            <li><a href="" ng-click="order('dateAdded', true)">Date Added (newest first)</a></li>
+          </ul>
+        </div>
+      </div>
+      <!-- Add menu -->
+      <div ng-show="menu == 'add'" class="col-md-10 col-sm-10 col-md-offset-1 col-sm-offset-1 input-group movie-input-group">
+        <span class="input-group-addon">Add Movie</span>
+        <input type="text" id="movie-name-input" ng-model="moviename" class="form-control" aria-describedby="movie-name-input" />
+        <span class="input-group-btn">
+          <button id="submit-movie" type="button" class="btn btn-success" ng-click="sendMovie()">
+            <i class="fa fa-check"></i>
+          </button>
+          <button type="button" class="btn btn-danger movie-option-button"  ng-click="changeMenu('add-edit')">
+            <i class="fa fa-close"></i>
+          </button>
+        </span>
+      </div>
+      <!-- Edit menu -->
+      <div ng-show="menu == 'edit'" class="col-md-10 col-sm-10 col-md-offset-1 col-sm-offset-1 input-group movie-input-group">
+        <span class="btn-group pull-right">
+          <button type="button" class="btn btn-danger movie-option-button" ng-click="changeMenu('add-edit')">
+            <i class="fa fa-close"></i>
+          </button>
+        </span>
+      </div>
+    </div>
+    <!-- table -->
+    <div class='panel-body'>
+      <div class="col-md-12 table-responsive">
+        <table class="table table-striped table-hover" id="movie-table">
+          <thead>
+            <tr>
+              <th class="">#</th>
+              <th class="">Seen?</th>
+              <th class="">Title</th>
+              <th class="">Added by</th>
+              <th class="">Added on</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="movie in movies">
+              <td>{{$index + 1}}</td>
+              <td><i ng-class="movie.watched ? 'fa-eye' : 'fa-eye-slash'" class="fa"></i></td>
+              <td>{{movie.movieName}}</td>
+              <td>{{movie.addedBy}}</td>
+              <td>{{movie.addedOn | amDateFormat:'MM-DD-YYYY HH:mm:ss'}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
+<script src=  "../vendor/moment/moment.js"></script>
+<script src=  "../vendor/angular-moment/angular-moment.js"></script>
 <script>
 /*           MovieList page             */
 
