--- a/public/partials/movie-search.html
+++ b/public/partials/movie-search.html
@@ -8,7 +8,7 @@
     <input type="text" id="movie-name-input" ng-model="moviename" class="form-control" aria-describedby="movie-name-input" />
     <span class="input-group-btn">
       <button id="search-movie" type="button" class="btn btn-success" ng-click="searchMovie()">
-        <i class="fa fa-check"></i>
+        <i class="fa fa-search"></i>
       </button>
     </span>
   </div>
@@ -26,29 +26,3 @@
     </table>
   </div>
 </div>
-<script>
-/*
-$('#search-movie').click(function () {
-  var movieName = $('#movie-name-input').val();
-  if (!movieName){
-    alertify.error('Movie name cannot be blank');
-    return;
-  }
-
-  var http = require('http')
-
-  var url = "http://www.omdbapi.com/?t=big%20hero" +
-    "&y=&plot=short&r=json"
-
-  http.request({
-    url: url,
-    json: true
-    }, function (error, response, body) {
-
-      if (!error && response.statusCode === 200) {
-        console.log(body) // Print the json response
-      }
-    });
-});
-*/
-</script>
